[project]
name = "restricttotopic"
version = "0.0.0"
description = "Checks if a text is related with a topic."
authors = [
    {name = "Maria Paz Cuturi", email = "paz@tryolabs.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8.1"
dependencies = [
    "guardrails-ai>=0.4.0",
    "pydantic>=2.4.2",
    "tenacity>=8.1.0",
    "transformers>=4.11.3",
    "torch>=2.1.1",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pyright",
    "ruff"
]

[tool.pyright]
include = ["validator"]